y.output
   0  $accept : programa $end

   1  programa : ID sentencias_declarativas BEGIN sentencias_ejecutables END
   2           | error sentencias_declarativas BEGIN sentencias_ejecutables END
   3           | ID sentencias_declarativas error sentencias_ejecutables END
   4           | ID sentencias_declarativas BEGIN sentencias_ejecutables error

   5  sentencias_declarativas : sentencias_declarativas sentencia_declarativa
   6                          |

   7  sentencia_declarativa : declaracion_variables
   8                        | declaracion_variables_comptime
   9                        | declaracion_funcion
  10                        | declaracion_clase
  11                        | declaracion_objeto

  12  declaracion_variables : tipo lista_variables ';'
  13                        | tipo lista_variables

  14  declaracion_variables_comptime : COMPTIME tipo lista_variables ';'
  15                                 | COMPTIME tipo lista_variables error
  16                                 | COMPTIME lista_variables ';'

  17  tipo : USHORTINT
  18       | DOUBLEF

  19  lista_variables : lista_variables ',' ID
  20                  | lista_variables ID
  21                  | ID

  22  declaracion_funcion : tipo FUNCTION ID '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'
  23                      | tipo FUNCTION error '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'
  24                      | tipo FUNCTION ID '(' parametros_formales ')' sentencias_declarativas error sentencias_ejecutables END ';'
  25                      | tipo FUNCTION ID '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables error ';'
  26                      | tipo FUNCTION ID '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END
  27                      | tipo FUNCTION ID '(' error ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'

  28  parametros_formales : parametros_formales ',' parametro_formal
  29                      | parametro_formal

  30  parametro_formal : tipo ID
  31                   | ID
  32                   | tipo

  33  declaracion_clase : CLASS ID BEGIN cuerpo_clase END ';'
  34                    | CLASS ID error cuerpo_clase END ';'
  35                    | CLASS ID BEGIN cuerpo_clase error ';'
  36                    | CLASS ID BEGIN cuerpo_clase END

  37  cuerpo_clase : elementos_clase sentencia_extends
  38               | elementos_clase
  39               | sentencia_extends
  40               |

  41  elementos_clase : elementos_clase elemento_clase
  42                  | elemento_clase

  43  elemento_clase : declaracion_variables
  44                 | declaracion_metodo

  45  sentencia_extends : EXTENDS lista_ids ';'
  46                    | EXTENDS error ';'
  47                    | EXTENDS lista_ids
  48                    | EXTENDS ';'

  49  lista_ids : lista_ids ',' ID
  50            | ID

  51  declaracion_metodo : tipo ID '(' parametros_formales ')' BEGIN sentencias_ejecutables END ';'
  52                     | tipo ID '(' parametros_formales ')' error sentencias_ejecutables END ';'
  53                     | tipo ID '(' error ')' BEGIN sentencias_ejecutables END ';'
  54                     | tipo ID '(' parametros_formales ')' BEGIN sentencias_ejecutables error ';'
  55                     | tipo ID '(' parametros_formales ')' BEGIN sentencias_ejecutables END

  56  declaracion_objeto : ID lista_variables ';'
  57                     | ID lista_variables

  58  sentencias_ejecutables : sentencias_ejecutables sentencia_ejecutable
  59                         | sentencia_ejecutable

  60  sentencia_ejecutable : asignacion ';'
  61                       | seleccion ';'
  62                       | salida ';'
  63                       | retorno ';'
  64                       | iterativa ';'
  65                       | asignacion
  66                       | seleccion
  67                       | salida
  68                       | retorno
  69                       | iterativa

  70  asignacion : lado_izquierdo ASIGNACION expresion
  71             | lado_izquierdo '=' expresion

  72  lado_izquierdo : ID
  73                 | acceso_posicional

  74  acceso_posicional : ID '[' indice ']'

  75  indice : ID
  76         | CTE

  77  expresion : expresion '+' termino
  78            | expresion '-' termino
  79            | expresion '+' error
  80            | error '+' termino
  81            | expresion '-' error
  82            | error '-' termino
  83            | termino

  84  termino : termino '*' factor
  85          | termino '/' factor
  86          | termino '*' error
  87          | error '*' factor
  88          | error '/' factor
  89          | termino '/' error
  90          | factor

  91  factor : ID
  92         | CTE
  93         | acceso_posicional
  94         | ID '=' '(' expresion ')'
  95         | TODF '(' expresion ')'
  96         | invocacion

  97  invocacion : ID '(' parametros_reales ')' lista_constantes_opcional
  98             | ID '.' ID '(' parametros_reales ')' lista_constantes_opcional
  99             | ID '(' error ')' lista_constantes_opcional
 100             | ID '.' ID '(' error ')' lista_constantes_opcional

 101  lista_constantes_opcional : '[' lista_constantes ']'
 102                            | '[' error ']'
 103                            |

 104  lista_constantes : lista_constantes ',' CTE
 105                   | CTE

 106  parametros_reales : parametros_reales ',' parametro_real
 107                    | parametro_real

 108  parametro_real : expresion

 109  iterativa : REPEAT bloque_ejecutable WHILE '(' condicion ')'
 110            | REPEAT bloque_ejecutable error '(' condicion ')'
 111            | REPEAT bloque_ejecutable WHILE '(' condicion
 112            | REPEAT bloque_ejecutable WHILE condicion ')'
 113            | REPEAT bloque_ejecutable WHILE condicion
 114            | REPEAT WHILE '(' condicion ')'

 115  seleccion : IF '(' condicion ')' bloque_ejecutable ELSE bloque_ejecutable END_IF
 116            | IF '(' condicion ')' bloque_ejecutable END_IF
 117            | IF '(' condicion bloque_ejecutable END_IF
 118            | IF condicion ')' bloque_ejecutable END_IF
 119            | IF condicion bloque_ejecutable END_IF
 120            | IF '(' condicion ')' bloque_ejecutable error

 121  condicion : expresion comparador expresion

 122  comparador : IGUAL
 123             | DISTINTO
 124             | MAYORIGUAL
 125             | MENORIGUAL
 126             | '>'
 127             | '<'

 128  bloque_ejecutable : sentencia_ejecutable
 129                    | BEGIN sentencias_ejecutables END
 130                    | error sentencias_ejecutables END
 131                    | BEGIN sentencias_ejecutables error

 132  salida : POUT '(' CADENA ')'
 133         | POUT '(' expresion ')'
 134         | POUT '(' ')'

 135  retorno : RET '(' expresion ')'

state 0
	$accept : . programa $end  (0)

	error  shift 1
	ID  shift 2
	.  error

	programa  goto 3


state 1
	programa : error . sentencias_declarativas BEGIN sentencias_ejecutables END  (2)
	sentencias_declarativas : .  (6)

	.  reduce 6

	sentencias_declarativas  goto 4


state 2
	programa : ID . sentencias_declarativas BEGIN sentencias_ejecutables END  (1)
	programa : ID . sentencias_declarativas error sentencias_ejecutables END  (3)
	programa : ID . sentencias_declarativas BEGIN sentencias_ejecutables error  (4)
	sentencias_declarativas : .  (6)

	.  reduce 6

	sentencias_declarativas  goto 5


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : error sentencias_declarativas . BEGIN sentencias_ejecutables END  (2)
	sentencias_declarativas : sentencias_declarativas . sentencia_declarativa  (5)

	ID  shift 6
	BEGIN  shift 7
	USHORTINT  shift 8
	DOUBLEF  shift 9
	CLASS  shift 10
	COMPTIME  shift 11
	.  error

	sentencia_declarativa  goto 12
	declaracion_variables  goto 13
	declaracion_variables_comptime  goto 14
	declaracion_funcion  goto 15
	declaracion_clase  goto 16
	declaracion_objeto  goto 17
	tipo  goto 18


state 5
	programa : ID sentencias_declarativas . BEGIN sentencias_ejecutables END  (1)
	programa : ID sentencias_declarativas . error sentencias_ejecutables END  (3)
	programa : ID sentencias_declarativas . BEGIN sentencias_ejecutables error  (4)
	sentencias_declarativas : sentencias_declarativas . sentencia_declarativa  (5)

	error  shift 19
	ID  shift 6
	BEGIN  shift 20
	USHORTINT  shift 8
	DOUBLEF  shift 9
	CLASS  shift 10
	COMPTIME  shift 11
	.  error

	sentencia_declarativa  goto 12
	declaracion_variables  goto 13
	declaracion_variables_comptime  goto 14
	declaracion_funcion  goto 15
	declaracion_clase  goto 16
	declaracion_objeto  goto 17
	tipo  goto 18


state 6
	declaracion_objeto : ID . lista_variables ';'  (56)
	declaracion_objeto : ID . lista_variables  (57)

	ID  shift 21
	.  error

	lista_variables  goto 22


state 7
	programa : error sentencias_declarativas BEGIN . sentencias_ejecutables END  (2)

	ID  shift 23
	RET  shift 24
	IF  shift 25
	POUT  shift 26
	REPEAT  shift 27
	.  error

	sentencias_ejecutables  goto 28
	sentencia_ejecutable  goto 29
	asignacion  goto 30
	seleccion  goto 31
	salida  goto 32
	retorno  goto 33
	iterativa  goto 34
	lado_izquierdo  goto 35
	acceso_posicional  goto 36


state 8
	tipo : USHORTINT .  (17)

	.  reduce 17


state 9
	tipo : DOUBLEF .  (18)

	.  reduce 18


state 10
	declaracion_clase : CLASS . ID BEGIN cuerpo_clase END ';'  (33)
	declaracion_clase : CLASS . ID error cuerpo_clase END ';'  (34)
	declaracion_clase : CLASS . ID BEGIN cuerpo_clase error ';'  (35)
	declaracion_clase : CLASS . ID BEGIN cuerpo_clase END  (36)

	ID  shift 37
	.  error


state 11
	declaracion_variables_comptime : COMPTIME . tipo lista_variables ';'  (14)
	declaracion_variables_comptime : COMPTIME . tipo lista_variables error  (15)
	declaracion_variables_comptime : COMPTIME . lista_variables ';'  (16)

	ID  shift 21
	USHORTINT  shift 8
	DOUBLEF  shift 9
	.  error

	tipo  goto 38
	lista_variables  goto 39


state 12
	sentencias_declarativas : sentencias_declarativas sentencia_declarativa .  (5)

	.  reduce 5


state 13
	sentencia_declarativa : declaracion_variables .  (7)

	.  reduce 7


state 14
	sentencia_declarativa : declaracion_variables_comptime .  (8)

	.  reduce 8


state 15
	sentencia_declarativa : declaracion_funcion .  (9)

	.  reduce 9


state 16
	sentencia_declarativa : declaracion_clase .  (10)

	.  reduce 10


state 17
	sentencia_declarativa : declaracion_objeto .  (11)

	.  reduce 11


state 18
	declaracion_variables : tipo . lista_variables ';'  (12)
	declaracion_variables : tipo . lista_variables  (13)
	declaracion_funcion : tipo . FUNCTION ID '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'  (22)
	declaracion_funcion : tipo . FUNCTION error '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'  (23)
	declaracion_funcion : tipo . FUNCTION ID '(' parametros_formales ')' sentencias_declarativas error sentencias_ejecutables END ';'  (24)
	declaracion_funcion : tipo . FUNCTION ID '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables error ';'  (25)
	declaracion_funcion : tipo . FUNCTION ID '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END  (26)
	declaracion_funcion : tipo . FUNCTION ID '(' error ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'  (27)

	ID  shift 21
	FUNCTION  shift 40
	.  error

	lista_variables  goto 41


state 19
	programa : ID sentencias_declarativas error . sentencias_ejecutables END  (3)

	ID  shift 23
	RET  shift 24
	IF  shift 25
	POUT  shift 26
	REPEAT  shift 27
	.  error

	sentencias_ejecutables  goto 42
	sentencia_ejecutable  goto 29
	asignacion  goto 30
	seleccion  goto 31
	salida  goto 32
	retorno  goto 33
	iterativa  goto 34
	lado_izquierdo  goto 35
	acceso_posicional  goto 36


state 20
	programa : ID sentencias_declarativas BEGIN . sentencias_ejecutables END  (1)
	programa : ID sentencias_declarativas BEGIN . sentencias_ejecutables error  (4)

	ID  shift 23
	RET  shift 24
	IF  shift 25
	POUT  shift 26
	REPEAT  shift 27
	.  error

	sentencias_ejecutables  goto 43
	sentencia_ejecutable  goto 29
	asignacion  goto 30
	seleccion  goto 31
	salida  goto 32
	retorno  goto 33
	iterativa  goto 34
	lado_izquierdo  goto 35
	acceso_posicional  goto 36


state 21
	lista_variables : ID .  (21)

	.  reduce 21


state 22
	lista_variables : lista_variables . ',' ID  (19)
	lista_variables : lista_variables . ID  (20)
	declaracion_objeto : ID lista_variables . ';'  (56)
	declaracion_objeto : ID lista_variables .  (57)

	';'  shift 45
	','  shift 46
	error  reduce 57
	BEGIN  reduce 57
	USHORTINT  reduce 57
	DOUBLEF  reduce 57
	CLASS  reduce 57
	COMPTIME  reduce 57


state 23
	lado_izquierdo : ID .  (72)
	acceso_posicional : ID . '[' indice ']'  (74)

	'['  shift 47
	ASIGNACION  reduce 72
	'='  reduce 72


state 24
	retorno : RET . '(' expresion ')'  (135)

	'('  shift 48
	.  error


state 25
	seleccion : IF . '(' condicion ')' bloque_ejecutable ELSE bloque_ejecutable END_IF  (115)
	seleccion : IF . '(' condicion ')' bloque_ejecutable END_IF  (116)
	seleccion : IF . '(' condicion bloque_ejecutable END_IF  (117)
	seleccion : IF . condicion ')' bloque_ejecutable END_IF  (118)
	seleccion : IF . condicion bloque_ejecutable END_IF  (119)
	seleccion : IF . '(' condicion ')' bloque_ejecutable error  (120)

	error  shift 49
	ID  shift 50
	CTE  shift 51
	TODF  shift 52
	'('  shift 53
	.  error

	expresion  goto 54
	acceso_posicional  goto 55
	termino  goto 56
	factor  goto 57
	invocacion  goto 58
	condicion  goto 59


state 26
	salida : POUT . '(' CADENA ')'  (132)
	salida : POUT . '(' expresion ')'  (133)
	salida : POUT . '(' ')'  (134)

	'('  shift 60
	.  error


state 27
	iterativa : REPEAT . bloque_ejecutable WHILE '(' condicion ')'  (109)
	iterativa : REPEAT . bloque_ejecutable error '(' condicion ')'  (110)
	iterativa : REPEAT . bloque_ejecutable WHILE '(' condicion  (111)
	iterativa : REPEAT . bloque_ejecutable WHILE condicion ')'  (112)
	iterativa : REPEAT . bloque_ejecutable WHILE condicion  (113)
	iterativa : REPEAT . WHILE '(' condicion ')'  (114)

	error  shift 61
	ID  shift 23
	BEGIN  shift 62
	RET  shift 24
	IF  shift 25
	POUT  shift 26
	REPEAT  shift 27
	WHILE  shift 63
	.  error

	sentencia_ejecutable  goto 64
	asignacion  goto 30
	seleccion  goto 31
	salida  goto 32
	retorno  goto 33
	iterativa  goto 34
	lado_izquierdo  goto 35
	acceso_posicional  goto 36
	bloque_ejecutable  goto 65


state 28
	programa : error sentencias_declarativas BEGIN sentencias_ejecutables . END  (2)
	sentencias_ejecutables : sentencias_ejecutables . sentencia_ejecutable  (58)

	ID  shift 23
	END  shift 66
	RET  shift 24
	IF  shift 25
	POUT  shift 26
	REPEAT  shift 27
	.  error

	sentencia_ejecutable  goto 67
	asignacion  goto 30
	seleccion  goto 31
	salida  goto 32
	retorno  goto 33
	iterativa  goto 34
	lado_izquierdo  goto 35
	acceso_posicional  goto 36


state 29
	sentencias_ejecutables : sentencia_ejecutable .  (59)

	.  reduce 59


state 30
	sentencia_ejecutable : asignacion . ';'  (60)
	sentencia_ejecutable : asignacion .  (65)

	';'  shift 68
	error  reduce 65
	ID  reduce 65
	END  reduce 65
	RET  reduce 65
	IF  reduce 65
	ELSE  reduce 65
	END_IF  reduce 65
	POUT  reduce 65
	REPEAT  reduce 65
	WHILE  reduce 65


state 31
	sentencia_ejecutable : seleccion . ';'  (61)
	sentencia_ejecutable : seleccion .  (66)

	';'  shift 69
	error  reduce 66
	ID  reduce 66
	END  reduce 66
	RET  reduce 66
	IF  reduce 66
	ELSE  reduce 66
	END_IF  reduce 66
	POUT  reduce 66
	REPEAT  reduce 66
	WHILE  reduce 66


state 32
	sentencia_ejecutable : salida . ';'  (62)
	sentencia_ejecutable : salida .  (67)

	';'  shift 70
	error  reduce 67
	ID  reduce 67
	END  reduce 67
	RET  reduce 67
	IF  reduce 67
	ELSE  reduce 67
	END_IF  reduce 67
	POUT  reduce 67
	REPEAT  reduce 67
	WHILE  reduce 67


state 33
	sentencia_ejecutable : retorno . ';'  (63)
	sentencia_ejecutable : retorno .  (68)

	';'  shift 71
	error  reduce 68
	ID  reduce 68
	END  reduce 68
	RET  reduce 68
	IF  reduce 68
	ELSE  reduce 68
	END_IF  reduce 68
	POUT  reduce 68
	REPEAT  reduce 68
	WHILE  reduce 68


state 34
	sentencia_ejecutable : iterativa . ';'  (64)
	sentencia_ejecutable : iterativa .  (69)

	';'  shift 72
	error  reduce 69
	ID  reduce 69
	END  reduce 69
	RET  reduce 69
	IF  reduce 69
	ELSE  reduce 69
	END_IF  reduce 69
	POUT  reduce 69
	REPEAT  reduce 69
	WHILE  reduce 69


state 35
	asignacion : lado_izquierdo . ASIGNACION expresion  (70)
	asignacion : lado_izquierdo . '=' expresion  (71)

	ASIGNACION  shift 73
	'='  shift 74
	.  error


state 36
	lado_izquierdo : acceso_posicional .  (73)

	.  reduce 73


state 37
	declaracion_clase : CLASS ID . BEGIN cuerpo_clase END ';'  (33)
	declaracion_clase : CLASS ID . error cuerpo_clase END ';'  (34)
	declaracion_clase : CLASS ID . BEGIN cuerpo_clase error ';'  (35)
	declaracion_clase : CLASS ID . BEGIN cuerpo_clase END  (36)

	error  shift 75
	BEGIN  shift 76
	.  error


state 38
	declaracion_variables_comptime : COMPTIME tipo . lista_variables ';'  (14)
	declaracion_variables_comptime : COMPTIME tipo . lista_variables error  (15)

	ID  shift 21
	.  error

	lista_variables  goto 77


state 39
	declaracion_variables_comptime : COMPTIME lista_variables . ';'  (16)
	lista_variables : lista_variables . ',' ID  (19)
	lista_variables : lista_variables . ID  (20)

	ID  shift 44
	';'  shift 78
	','  shift 46
	.  error


state 40
	declaracion_funcion : tipo FUNCTION . ID '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'  (22)
	declaracion_funcion : tipo FUNCTION . error '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'  (23)
	declaracion_funcion : tipo FUNCTION . ID '(' parametros_formales ')' sentencias_declarativas error sentencias_ejecutables END ';'  (24)
	declaracion_funcion : tipo FUNCTION . ID '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables error ';'  (25)
	declaracion_funcion : tipo FUNCTION . ID '(' parametros_formales ')' sentencias_declarativas BEGIN sentencias_ejecutables END  (26)
	declaracion_funcion : tipo FUNCTION . ID '(' error ')' sentencias_declarativas BEGIN sentencias_ejecutables END ';'  (27)

	error  shift 79
	ID  shift 80
	.  error


state 41
	declaracion_variables : tipo lista_variables . ';'  (12)
	declaracion_variables : tipo lista_variables .  (13)
	lista_variables : lista_variables . ',' ID  (19)
	lista_variables : lista_variables . ID  (20)

	ID  shift 44
	';'  shift 81
	','  shift 46
	error  reduce 13
	BEGIN  reduce 13
	END  reduce 13
	USHORTINT  reduce 13
	DOUBLEF  reduce 13
	CLASS  reduce 13
	COMPTIME  reduce 13
	EXTENDS  reduce 13


state 42
	programa : ID sentencias_declarativas error sentencias_ejecutables . END  (3)
	sentencias_ejecutables : sentencias_ejecutables . sentencia_ejecutable  (58)

	ID  shift 23
	END  shift 82
	RET  shift 24
	IF  shift 25
	POUT  shift 26
	REPEAT  shift 27
	.  error

	sentencia_ejecutable  goto 67
	asignacion  goto 30
	seleccion  goto 31
	salida  goto 32
	retorno  goto 33
	iterativa  goto 34
	lado_izquierdo  goto 35
	acceso_posicional  goto 36


state 43
	programa : ID sentencias_declarativas BEGIN sentencias_ejecutables . END  (1)
	programa : ID sentencias_declarativas BEGIN sentencias_ejecutables . error  (4)
	sentencias_ejecutables : sentencias_ejecutables . sentencia_ejecutable  (58)

	error  shift 83
	ID  shift 23
	END  shift 84
	RET  shift 24
	IF  shift 25
	POUT  shift 26
	REPEAT  shift 27
	.  error

	sentencia_ejecutable  goto 67
	asignacion  goto 30
	seleccion  goto 31
	salida  goto 32
	retorno  goto 33
	iterativa  goto 34
	lado_izquierdo  goto 35
	acceso_posicional  goto 36

